worked on respnosiveness for muitiple pages and dark mode issues. google sign in logic update

--- a/app/output.css
+++ b/app/output.css
@@ -631,6 +631,10 @@ video {
   bottom: 2.5rem;
 }
 
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
 .bottom-20 {
   bottom: 5rem;
 }
@@ -1083,6 +1087,10 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-3 {
@@ -1591,11 +1599,6 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .py-1 {
@@ -2408,6 +2411,11 @@ a {
 
 :is(.dark .dark\:p-4) {
   padding: 1rem;
+}
+
+:is(.dark .dark\:text-black) {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:text-gray-200) {
